# orbis

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  checksum-Elixir.Orbis.NIF.exs  mix.exs
examples/: conjunction_alert.livemd  gnss_positioning.livemd  iss_tracker.livemd
guides/: accuracy.md  batch_analysis.md  collision_probability.md  conjunction_screening.md  gnss_constellation_catalog.md  pass_prediction.md  track_iss.md
lib/: orbis.ex
native/orbis_nif/: Cargo.toml  README.md
native/orbis_nif/.cargo/: config.toml.example
native/orbis_nif/src/: atmosphere.rs  broadcast.rs  conjunction.rs  coordinates.rs  doppler.rs  ephemeris.rs  gauss.rs  iau2000a_data.rs  iers_data.rs  ils.rs  iod.rs  iono.rs  lambert.rs  lib.rs  matrix.rs  nutation.rs  precession.rs  propagation.rs  reduced_orbit.rs  rinex_obs.rs  rtk_filter.rs  sp3.rs  spp.rs  tides.rs  time_scales.rs  tropo.rs
test/: angles_test.exs  atmosphere_test.exs  ccsds_cdm_test.exs  celestrak_test.exs  collision_test.exs  conjunction_test.exs  constellation_test.exs  coordinates_test.exs  covariance_test.exs  crinex_test.exs  dgnss_test.exs  doctest_test.exs  doppler_test.exs  eclipse_test.exs  encounter_test.exs  ephemeris_test.exs  fetch_merged_sp3_file_test.exs  ftp_transport_test.exs  gnss_antex_test.exs  gnss_application_oracle_test.exs  gnss_carrier_phase_oracle_test.exs  gnss_carrier_phase_test.exs  gnss_constellation_test.exs  gnss_core_integer_least_squares_test.exs  gnss_core_linear_algebra_test.exs  gnss_data_test.exs  gnss_doppler_velocity_real_arc_test.exs  (+52 more)
(+166 files in other folders)
