[package]
name = "orbis_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.3"
chrono = "0.4"
# Lane pin until the gauge-constraint kernel is published to crates.io.
astrodynamics = { git = "https://github.com/neilberkman/astrodynamics.git", rev = "f79359e" }
astrodynamics-gnss = { git = "https://github.com/neilberkman/astrodynamics.git", rev = "f79359e" }
